## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = rhod_key_driver

rhod_key_driver_SOURCES = \
	main.c           \
	utils.c           \
	utils.h           \
	suspend.c           \
	suspend.h           \
	key_processor.c           \
	key_processor.h           \
	input.c           \
	input.h

rhod_key_driver_LDFLAGS = 

rhod_key_driver_LDADD = 

